--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+body{
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+    display: flex;
+    flex-direction:column;
+    align-items:center;
+    padding: 0 100px;
+    width: 100vw;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container-dark{
+    display: flex;
+    padding: 0 100px;
+    flex-direction:column;
+    align-items:center;
+    background-color: black;
+    color:white;
+    transition: all 0.5s ease;
+    min-height: 100vh;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.error{
+    background-color: rgb(233, 130, 130);
+    width: 80%;
+    padding: 50px;
+    border-radius: 10px;
+    margin-top:80px;
 }
